--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,8 +7,8 @@ ENV PYTHONDONTWRITEBYTECODE 1
 
 RUN apt-get update && apt-get -y install
 
-RUN pip install --upgrade pip
+RUN pip3 install --upgrade pip
 COPY ./requirements.txt /usr/src/
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 
 COPY . /usr/src/
