added platform archtecture

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ version: "3.8"
 
 services:
   api:
-    build: ./server
-    command: uvicorn main:app --reload --workers 1 --host 0.0.0.0 --port 8000
+    build: 
+      context: ./server
+      args:   
+        - platform='linux/amd64'
+    command: uvicorn main:app --reload --host 0.0.0.0
     volumes:
       - ./server:/usr/src/
     ports:
